// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`barStack > renders correctly size large 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
    >
      <div
        class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
      >
        <label
          class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        />
        <div
          class="styles__11sr5bj9"
        >
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 10.638297872340425%;"
          >
            <div
              class="styles__18qbklt5"
              tabindex="0"
            >
              <div
                class="styles__11sr5bj2 styles_size_large__11sr5bj4"
                data-testid="content-1"
              >
                <span
                  class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                  style="--whiteSpace__1giziax1: nowrap;"
                >
                  Hello
                </span>
              </div>
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 22.340425531914892%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_large__11sr5bj4"
              data-testid="content-2"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 22.340425531914892%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_large__11sr5bj4"
              data-testid="content-3"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Encore
              </span>
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 22.340425531914892%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_large__11sr5bj4"
              data-testid="content-4"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Next
              </span>
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 22.340425531914892%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_large__11sr5bj4"
              data-testid="content-5"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Bye bye
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > renders correctly size medium 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
    >
      <div
        class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
      >
        <label
          class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        />
        <div
          class="styles__11sr5bj9"
        >
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 10.638297872340425%;"
          >
            <div
              class="styles__18qbklt5"
              tabindex="0"
            >
              <div
                class="styles__11sr5bj2 styles_size_medium__11sr5bj5"
                data-testid="content-1"
              >
                <span
                  class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                  style="--whiteSpace__1giziax1: nowrap;"
                >
                  Hello
                </span>
              </div>
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 22.340425531914892%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_medium__11sr5bj5"
              data-testid="content-2"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 22.340425531914892%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_medium__11sr5bj5"
              data-testid="content-3"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Encore
              </span>
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 22.340425531914892%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_medium__11sr5bj5"
              data-testid="content-4"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Next
              </span>
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 22.340425531914892%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_medium__11sr5bj5"
              data-testid="content-5"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Bye bye
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > renders correctly size small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
    >
      <div
        class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
      >
        <label
          class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        />
        <div
          class="styles__11sr5bj9"
        >
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 10.638297872340425%;"
          >
            <div
              class="styles__18qbklt5"
              tabindex="0"
            >
              <div
                class="styles__11sr5bj2 styles_size_small__11sr5bj6"
                data-testid="content-1"
              >
                <span
                  class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionSmallStrong__1do42lsr style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                  style="--whiteSpace__1giziax1: nowrap;"
                >
                  Hello
                </span>
              </div>
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 22.340425531914892%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_small__11sr5bj6"
              data-testid="content-2"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionSmallStrong__1do42lsr style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 22.340425531914892%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_small__11sr5bj6"
              data-testid="content-3"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionSmallStrong__1do42lsr style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Encore
              </span>
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 22.340425531914892%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_small__11sr5bj6"
              data-testid="content-4"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionSmallStrong__1do42lsr style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Next
              </span>
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 22.340425531914892%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_small__11sr5bj6"
              data-testid="content-5"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionSmallStrong__1do42lsr style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Bye bye
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > renders correctly size xsmall 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
    >
      <div
        class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
      >
        <label
          class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        />
        <div
          class="styles__11sr5bj9"
        >
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 10.638297872340425%;"
          >
            <div
              class="styles__18qbklt5"
              tabindex="0"
            >
              <div
                class="styles__11sr5bj2 styles_size_xsmall__11sr5bj7"
                data-testid="content-1"
              >
                <span
                  class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionSmallStrong__1do42lsr style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                  style="--whiteSpace__1giziax1: nowrap;"
                >
                  Hello
                </span>
              </div>
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 22.340425531914892%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_xsmall__11sr5bj7"
              data-testid="content-2"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionSmallStrong__1do42lsr style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 22.340425531914892%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_xsmall__11sr5bj7"
              data-testid="content-3"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionSmallStrong__1do42lsr style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Encore
              </span>
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 22.340425531914892%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_xsmall__11sr5bj7"
              data-testid="content-4"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionSmallStrong__1do42lsr style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Next
              </span>
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 22.340425531914892%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_xsmall__11sr5bj7"
              data-testid="content-5"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionSmallStrong__1do42lsr style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Bye bye
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
    >
      <div
        class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
      >
        <label
          class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        />
        <div
          class="styles__11sr5bj9"
        >
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 10.638297872340425%;"
          >
            <div
              class="styles__18qbklt5"
              tabindex="0"
            >
              <div
                class="styles__11sr5bj2 styles_size_medium__11sr5bj5"
                data-testid="content-1"
              >
                <span
                  class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                  style="--whiteSpace__1giziax1: nowrap;"
                >
                  Hello
                </span>
              </div>
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 22.340425531914892%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_medium__11sr5bj5"
              data-testid="content-2"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 22.340425531914892%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_medium__11sr5bj5"
              data-testid="content-3"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Encore
              </span>
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 22.340425531914892%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_medium__11sr5bj5"
              data-testid="content-4"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Next
              </span>
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 22.340425531914892%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_medium__11sr5bj5"
              data-testid="content-5"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Bye bye
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > should render correctly with event handlers 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
    >
      <div
        class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
      >
        <label
          class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        />
        <div
          class="styles__11sr5bj9"
        >
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 100%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_medium__11sr5bj5"
              data-testid="content-1"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Hello
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > should render correctly with hovering legend 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
    >
      <div
        class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
      >
        <label
          class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        />
        <div
          class="styles__11sr5bj9"
        >
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 100%;"
          >
            <div
              class="styles__18qbklt5"
            >
              <div
                class="styles__18qbklt5"
                tabindex="0"
              >
                <div
                  class="styles__11sr5bj2 styles_size_medium__11sr5bj5"
                  data-testid="content-1"
                >
                  <span
                    class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                    style="--whiteSpace__1giziax1: nowrap;"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v"
      >
        <div
          class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.25rem_xxsmall__xf61n45j"
          data-testid="legend-1"
        >
          <span
            class="styles__11sr5bjb styles_child_0__11sr5bjc"
          />
          <span
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          >
            Hello
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > should render correctly with label and label information 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
    >
      <div
        class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j styles_justifyContent_space-between_xxsmall__xf61n477"
        >
          <label
            class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          >
            label
          </label>
          <span
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          >
            label information
          </span>
        </div>
        <div
          class="classname styles__11sr5bj9"
        >
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 2%;"
          >
            <div
              class="styles__18qbklt5"
              tabindex="0"
            >
              <div
                class="styles__11sr5bj2 styles_size_medium__11sr5bj5"
                data-testid="content-1"
              >
                <span
                  class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                  style="--whiteSpace__1giziax1: nowrap;"
                >
                  Hello
                </span>
              </div>
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 4.2%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_medium__11sr5bj5"
              data-testid="content-2"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 4.2%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_medium__11sr5bj5"
              data-testid="content-3"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Encore
              </span>
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 4.2%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_medium__11sr5bj5"
              data-testid="content-4"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Next
              </span>
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 4.2%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_medium__11sr5bj5"
              data-testid="content-5"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Bye bye
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > should render correctly with legend outside 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
    >
      <div
        class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
      >
        <label
          class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        />
        <div
          class="styles__11sr5bj9"
        >
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 2%;"
          >
            <div
              class="styles__18qbklt5"
            >
              <div
                class="styles__18qbklt5"
                tabindex="0"
              >
                <div
                  class="styles__11sr5bj2 styles_size_medium__11sr5bj5"
                  data-testid="content-1"
                >
                  <span
                    class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                    style="--whiteSpace__1giziax1: nowrap;"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 4.2%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_medium__11sr5bj5"
              data-testid="content-2"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 4.2%;"
          >
            <div
              class="styles__18qbklt5"
              tabindex="0"
            >
              <div
                class="styles__11sr5bj2 styles_size_medium__11sr5bj5"
                data-testid="content-3"
              >
                <span
                  class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                  style="--whiteSpace__1giziax1: nowrap;"
                />
              </div>
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 4.2%;"
          >
            <div
              class="styles__18qbklt5"
              tabindex="0"
            >
              <div
                class="styles__11sr5bj2 styles_size_medium__11sr5bj5"
                data-testid="content-4"
              >
                <span
                  class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                  style="--whiteSpace__1giziax1: nowrap;"
                />
              </div>
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 4.2%;"
          >
            <div
              class="styles__18qbklt5"
              tabindex="0"
            >
              <div
                class="styles__11sr5bj2 styles_size_medium__11sr5bj5"
                data-testid="content-5"
              >
                <span
                  class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                  style="--whiteSpace__1giziax1: nowrap;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v"
      >
        <div
          class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.25rem_xxsmall__xf61n45j"
          data-testid="legend-1"
        >
          <span
            class="styles__11sr5bjb styles_child_0__11sr5bjc"
          />
          <span
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          >
            Hello
          </span>
        </div>
        <div
          class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.25rem_xxsmall__xf61n45j"
          data-testid="legend-2"
        >
          <span
            class="styles__11sr5bjb styles_child_1__11sr5bjd"
          />
          <span
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          />
        </div>
        <div
          class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.25rem_xxsmall__xf61n45j"
          data-testid="legend-3"
        >
          <span
            class="styles__11sr5bjb styles_child_2__11sr5bje"
          />
          <span
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          >
            Encore
          </span>
        </div>
        <div
          class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.25rem_xxsmall__xf61n45j"
          data-testid="legend-4"
        >
          <span
            class="styles__11sr5bjb styles_child_3__11sr5bjf"
          />
          <span
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          >
            Next
          </span>
        </div>
        <div
          class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.25rem_xxsmall__xf61n45j"
          data-testid="legend-5"
        >
          <span
            class="styles__11sr5bjb styles_child_4__11sr5bjg"
          />
          <span
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          >
            Bye bye
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > should render correctly with total 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
    >
      <div
        class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
      >
        <label
          class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        />
        <div
          class="styles__11sr5bj9"
        >
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 2%;"
          >
            <div
              class="styles__18qbklt5"
              tabindex="0"
            >
              <div
                class="styles__11sr5bj2 styles_size_medium__11sr5bj5"
                data-testid="content-1"
              >
                <span
                  class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                  style="--whiteSpace__1giziax1: nowrap;"
                >
                  Hello
                </span>
              </div>
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 4.2%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_medium__11sr5bj5"
              data-testid="content-2"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 4.2%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_medium__11sr5bj5"
              data-testid="content-3"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Encore
              </span>
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 4.2%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_medium__11sr5bj5"
              data-testid="content-4"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Next
              </span>
            </div>
          </div>
          <div
            class="styles__11sr5bj1"
            style="--_11sr5bj0: 4.2%;"
          >
            <div
              class="styles__11sr5bj2 styles_size_medium__11sr5bj5"
              data-testid="content-5"
            >
              <span
                class="styles__11sr5bj8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Bye bye
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
